# idevice_pair

./: .gitignore  Assets.car  Cargo.toml  README.md  build.rs  icon.icns
.github/workflows/: rust.yml
src/: discover.rs  main.rs  mount.rs
