[package]
name = "idevice_pair"
version = "0.1.5"
edition = "2024"

[dependencies]
idevice = { version = "0.1.39", features = [
  "pair",
  "usbmuxd",
  "installation_proxy",
  "afc",
  "house_arrest",
  "mobile_image_mounter",
  "tss",
] }
egui = { version = "0.32" }
egui_logger = { version = "0.8" }
eframe = { version = "0.32", default-features = false, features = [
  "default_fonts",
  "wgpu",
  "glow",
  "wayland",
  "x11",
] }
wgpu = { version = "25", features = ["dx12", "vulkan", "metal", "gles"] }
rfd = { version = "0.15", features = ["gtk3"], default-features = false }
tokio = { version = "1.45", features = ["full"] }
plist = { version = "1.7" }
log = { version = "0.4" }
uuid = { version = "1.16", features = ["v4"] }
mdns = { version = "3" }
futures-util = { version = "0.3" }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
